# epsilon-ad

./: Cargo.toml  Untitled.ipynb
src/: epsilon.rs  epsilon_arrays.rs  lib.rs  lifting.rs  main.rs  perturbation.rs  scalar.rs  traits.rs
src/arrays/: arrays.rs
src/differentiation/: derivative_ids.rs  differentiate.rs  directional_derivative.rs  hessian.rs  jacobian.rs  lift_for_differentiation.rs  lifting.rs  lifting_traits.rs  mod.rs  tagged_evaluation.rs  types.rs
src/duals/: dual_arrays.rs  duals.rs  epsilons.rs  mod.rs  perturbations.rs
src/duals/ops/: dual_ops.rs  mod.rs  perturbation_ops.rs
src/epsilon_arrays/: arrays.rs  epsilon_array_ops.rs  epsilon_arrays.rs  mod.rs  standard_basis.rs
src/epsilon_duals/: dual_numbers.rs  dual_ops.rs  duals.rs  epsilon.rs  epsilon_arrays.rs  epsilons.rs  mod.rs  ops.rs  perturbation.rs  perturbations.rs  scalar.rs
src/epsilon_duals/ops/: dual_ops.rs  epsilon_ops.rs  perturbation_ops.rs
src/epsilon_polynomials/: monomials.rs
src/ops/: dual_array_oprs.rs  dual_ops.rs  epsilon_ops.rs  mod.rs  perturbation_ops.rs
tests/: derivatives.rs  higher_order_derivatives.rs  main.rs  testing_tagged_evaluations.rs
tests/chatgpt/: mod.rs  polynomial_jacobian_hessian.rs  random_element_multiplication.rs
tests/epsilon_polynomials/: mod.rs  monomials.rs  polynomials.rs  rationals.rs
tests/hessian_testing/: derivatives.rs  mod.rs  testing_monomials.rs  testing_polynomials.rs  testing_rationals.rs
tests/jacobian_testing/: derivatives.rs  mod.rs  testing_monomials.rs  testing_polynomials.rs  testing_rationals.rs
(+3 files in other folders)
